[workspace]
members = ["net/wasabi", "saba_core"]

[package]
authors = ["susumu tomita <oyster880@gmail.com>"]
default-run = "saba"
name = "saba"
version = "0.1.0"
edition = "2021"

[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi", "dep:nori"]

[[bin]]
name = "saba"
path = "src/main.rs"
required-features = ["wasabi"]

[dependencies]
saba_core = { path = "./saba_core" }
net_wasabi = { path = "./net/wasabi", optional = true }
nori = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
