[workspace]
members = ["net/wasabi", "saba_core", "ui/wasabi"]

[package]
authors = ["susumu tomita <oyster880@gmail.com>"]
default-run = "saba"
name = "saba"
version = "0.1.0"
edition = "2021"

[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi", "dep:ui_wasabi", "dep:noli"]

[[bin]]
name = "saba"
path = "src/main.rs"
required-features = ["wasabi"]

[dependencies]
saba_core = { path = "./saba_core" }
net_wasabi = { path = "./net/wasabi", optional = true }
ui_wasabi = { path = "./ui/wasabi", optional = true }
noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
# cargo-husky = "1.5.0"

# [dev-dependencies.cargo-husky]
# version = "1"
# default-features = false
# features = ["user-hooks"]
